--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -49,6 +49,14 @@
     	width: 100%;
 	}
 
+	/*Official Campaign Partner*/
+	.panels-flexible-region .pane-node-field-bussines-sector {
+	    float: none;
+	    padding-top: 10px !important;
+	    margin-right: 0;
+	    clear: both;
+	}
+
 }
 
 
@@ -467,14 +475,9 @@
 	    padding-left: 0;
 	}
 
-	.panels-flexible-column-inside-first .panels-flexible-region-first {
-	    float: none;
-	    padding-right: 0;
-	}
-
 	.panels-flexible-region .hwc-share-widget ul .share-this-article {
 	    float: left;
-	    padding-top: 10px;
+	    padding-top: 0;
 	}
 
 	.panels-flexible-row .hwc-share-widget{
