--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -333,6 +333,13 @@
 		margin-left: 0
 	}
 
+	body.ocp .panels-flexible-region .pane-node-field-bussines-sector{
+	    float: none;
+	    padding-right: 0;
+	    padding-top: 10px !important;
+	    clear: both;
+	}
+
 	/*Footer*/
 	.footer-section{
 		display: none;
