HW20-46 - HWC20 Development -Events list, detail, backend

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -340,6 +340,118 @@
 	    clear: both;
 	}
 
+	/* Events */
+	.page-events{
+
+		.region-sidebar-first{
+			.contextual-links-region{
+				margin-top: 0; 
+			}
+		}
+
+		.view-events-search{
+			.view-content{
+				clear: both;
+				padding-top: 3em;
+				.view-content:nth-child(2){
+					.views-row{
+						padding: 1em 0;
+					}
+				}
+			}
+		}
+
+		.region.region-content{
+			clear: both;
+			#block-system-main{
+				.views-exposed-widgets {
+					margin-left: 0;
+					#edit-search-api-views-fulltext-wrapper{
+						margin-left: 0;
+					}
+					.views-widget-filter-field_start_date_value{
+						margin-left: 0;
+					}
+					.form-item-years{
+						margin-left: 0;
+					}
+					#edit-search-api-views-fulltext{
+						max-width: 299px;
+					}
+					input{
+						width: 299px!important;
+					}
+					.form-control{
+						width: 299px!important;
+						border-radius: 5px;
+						background: url(../images/green-select.png) no-repeat scroll 94% center #ffffff !important;
+					}
+					#edit-years{
+						width: 299px!important;
+					}
+					#edit-submit-events-search {
+					    left: 0px;
+					    top: 73px;
+					    position: absolute;
+					}
+				}
+			} 
+		}
+
+		#osha-events-dates-form{
+			float: left;
+		}
+
+		.views-exposed-widgets{
+			padding-top: 0;
+		}
+
+		#edit-search-api-views-fulltext{
+			margin-top: 0;
+		}
+
+	}
+
+	#block-system-main .view-events-search, .view-events-search{
+		margin: 0;	
+	}
+
+	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row .views-field-view-node{
+		position: relative;
+		margin-left: 230px;
+		float: left;
+		clear: both;
+		margin-top: -2em;  
+    }
+
+	.page-events .region-content #block-system-main .views-row > div{
+		margin-left: 0;
+		margin-right: 0;
+	}
+
+	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row{
+		min-height: auto;
+		width: 100%;
+	}
+
+	.views-widget-filter-field_country_code{
+		padding-top: 0px !important;
+	}
+
+	.page-events .region-content #block-system-main .views-exposed-widgets .form-item-years{
+		padding-top: 0px;
+	}
+
+	.views-widget-filter-field_country_code{
+		float: none;
+		clear: both !important;
+	}
+
+	.add-to-calendar {
+	    margin-left: 330px;
+	    margin-top: -2em;
+	}
+
 	/*Footer*/
 	.footer-section{
 		display: none;
@@ -510,6 +622,18 @@
 		}
 	}
 
+	/* Events */
+
+	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row{
+		min-height: auto;
+		width: 100%;
+	}
+
+	.views-widget-filter-field_country_code{
+		float: none;
+		clear: both !important;
+	}
+
 	.footer{
 		div.container{
 			padding-left: 0;
@@ -576,4 +700,60 @@
 	    right: 0%;
 	}
 
+	/* Events */
+
+	.page-events .region.region-content #block-system-main .views-exposed-widgets{
+		margin-left: 0;
+	}
+
+	#block-system-main .view-events-search, .view-events-search{
+		margin: 0;
+	}
+
+	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row{
+		min-height: auto;
+		width: 100%;
+		margin-top: 2em;
+	}
+
+	.page-events .region.region-content #block-system-main .views-exposed-widgets .form-control {
+    	width: 152px!important;
+	}
+
+	.views-widget-filter-field_country_code{
+		float: none;
+		clear: both !important;
+	}
+
+	.page-events #edit-search-api-views-fulltext {
+	    margin-top: 25px;
+	}
+
+	.page-events .region.region-content #block-system-main .views-exposed-widgets #edit-years {
+	    width: 153px!important;
+	}
+
+	.page-publications .views-exposed-widget, .page-events .views-exposed-widget {
+	    width: auto !important;
+	    margin-top: 1em;
+	    margin-right: 0.5em;
+	}
+
+	.page-events .region.region-content #block-system-main .views-exposed-widgets #edit-submit-events-search {
+	    left: auto;
+	    top: 24px;
+	}
+
+	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row .views-field-view-node {
+		position: relative;
+		margin-left: auto;
+		float: none;
+		clear: none;
+		margin-top: 52px;
+		width: 100%;
+	}
+
+	.page-events .view-events-search .view-content {
+	    padding-top: 0em;
+	}
 }
