--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -94,3 +94,27 @@
 	}
 
 }
+
+
+@media (max-width: 1280px) {
+	/* Events */
+
+	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row{
+		min-height: auto;
+		width: 100%;
+	}
+
+	.views-widget-filter-field_country_code{
+		float: none;
+		clear: both !important;
+		padding-top: 10px !important;
+	}
+
+	.page-events .region-content #block-system-main .views-exposed-widgets .form-item-years{
+		padding-top: 10px;
+	}
+
+	.page-events .region-content #block-system-main .views-exposed-widget #edit-submit-events-search{
+		top: 34px;
+	}
+}
