--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -582,6 +582,98 @@
 	} 
 	
 
+	.page-events{
+
+		.region-sidebar-first{
+			.contextual-links-region{
+				margin-top: 0; 
+			}
+		}
+
+		.view-events-search{
+			.view-content{
+				clear: both;
+				padding-top: 1em;
+				.view-content:nth-child(2){
+					.views-row{
+						padding: 1em 0;
+					}
+				}
+			}
+		}
+
+		.region.region-content{
+			clear: both;
+			#block-system-main{
+				.views-exposed-widgets {
+					margin-left: 15px;
+					#edit-search-api-views-fulltext-wrapper{
+						margin-left: 0;
+					}
+					.views-widget-filter-field_start_date_value{
+						margin-left: 0;
+					}
+					.form-item-years{
+						margin-left: 0;
+					}
+					#edit-search-api-views-fulltext{
+						max-width: 299px;
+					}
+					input{
+						width: 299px!important;
+					}
+					.form-control{
+						width: 299px!important;
+						border-radius: 5px;
+						background: url(../images/green-select.png) no-repeat scroll 94% center #ffffff !important;
+					}
+					#edit-years{
+						width: 299px!important;
+					}
+					#edit-submit-events-search {
+					    left: 0px;
+					    top: 73px;
+					}
+				}
+			} 
+		}
+
+		#osha-events-dates-form{
+			float: left;
+		}
+
+		.views-exposed-widgets{
+			padding-top: 0;
+		}
+
+		#edit-search-api-views-fulltext{
+			margin-top: 0;
+		}
+
+	}
+
+	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row .views-field-view-node{
+		position: relative;
+		margin-left: 0;
+		float: none;
+		clear: both;
+		margin-top: 20px;
+		width: 100%;
+	}
+
+	.page-events .region-content #block-system-main .views-row > div{
+		margin-left: 0;
+		margin-right: 0;
+	}
+
+	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row{
+		min-height: auto;
+	}
+
+	.add-to-calendar{
+		margin-left: 108px;
+		margin-top: -21px;
+	}
 }
 
 
