--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -4147,6 +4147,7 @@ p.no-results{
 		.views-row{
 			.field-name-field-talking-title{
 				font-weight: bold;
+				color: #57575a;
 			}
 			.field-type-datetime{
 				margin-top: 0em;
@@ -7424,7 +7425,10 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	}
 	.more-link{
 		color: @btn-default-color;
-		background-color: @btn-default-bg;
+		clear: both;
+		display: block;
+		width: 100%;
+		margin-top: 2em;
 	}
 }
 /* End view-partners */
