--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -580,6 +580,27 @@
     		top: 535px;
 	    }
 	} 
+
+
+	#block-views-partners-block-3{
+		padding-left: 4em;
+		h2{
+			padding-left: 0;
+    		margin-left: 0;
+		}
+
+		.views-row.hidden-xs{
+			display: block !important;
+		    float: left;
+		    width: 35%; 
+		}
+
+		.view-partners div .views-field {
+	    	border-top: none !important;
+	    	border-left: 1px solid #CCC !important;
+	    	border-right: 1px solid #CCC !important;
+		}
+	}
 	
 
 	.page-events{
@@ -674,6 +695,10 @@
 		margin-left: 108px;
 		margin-top: -21px;
 	}
+
+
+
+
 }
 
 
